--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -28,6 +28,10 @@ suites:
     attributes:
       nginx:
         repo_source: nginx
+  - name: lwrps
+    run_list:
+      - recipe[nginx::default]
+      - recipe[nginx_test::lwrps]
   - name: modules
     run_list:
       - recipe[nginx::source]
