tell travis to not install other groups

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-bundler_args: --without kitchen_vagrant
+bundler_args: --without development kitchen_docker kitchen_vagrant
 rvm:
 - 2.1.0
 before_install:
