--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ HashSyntax:
   EnforcedStyle: hash_rockets
   Exclude:
     - Rakefile
+    - 'spec/**/*'
+    - 'test/**/*'
 # Don't fail on whitespace between method names and arguments
 Style/SingleSpaceBeforeFirstArg:
   Enabled: false
