add artifact debugging for logs

--- a/circle.yml
+++ b/circle.yml
@@ -15,3 +15,7 @@ test:
     - bundle exec rake
     - bundle exec kitchen verify -c:
         timeout: 900
+
+general:
+  artifacts:
+    - "~/.kitchen/logs/"
