--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ dependencies:
 test:
   override:
     - bundle exec rake
-    - bundle exec kitchen verify -c:
+    - bundle exec kitchen verify -c=4:
         timeout: 900
 
 general:
