--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ dependencies:
 test:
   override:
     - bundle exec rake
-    - bundle exec kitchen verify -c=4:
+    - bundle exec kitchen verify:
         timeout: 1800
 
 general:
