Spec/Test updates
- Split out systemd platforms to their own kitchen config file
  After spending a non-trivial amount of effort attempting to get
  kitchen-docker to play nice with systemd and CircleCI, leaving these
  platforms to vagrant-based kitchen testing is the current best
  solution in order to move forward.
- Reorganized some of the spec test assertions and layouts to better
  match the DRY approach of shared_examples
- Added a fixture recipe to set up repos and add packages f needed for
  ktichen tests

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,3 +1,4 @@
+---
 driver:
   name: vagrant
 
@@ -5,30 +6,30 @@ provisioner:
   name: chef_zero
 
 platforms:
-  - name: debian-7
+  - name: debian-7.9
   - name: ubuntu-12.04
   - name: ubuntu-14.04
-  # - name: ubuntu-15.04
-  # - name: centos-5.11
-  # - name: centos-6.6
-  - name: centos-7.1
-    run_list:
-      - recipe[nginx_service_test::nginx_repo]
+  - name: centos-6.7
+  - name: centos-7.2
 
 suites:
   - name: example
     run_list:
+      - recipe[nginx_service_test::common]
       - recipe[nginx::example]
 
   - name: service_single
     run_list:
+      - recipe[nginx_service_test::common]
       - recipe[nginx_service_test::single]
 
   - name: service_multi
     run_list:
+      - recipe[nginx_service_test::common]
       - recipe[nginx_service_test::multi]
 
   - name: service_single_upstream
     run_list:
+      - recipe[nginx_service_test::common]
       - recipe[nginx_service_test::nginx_repo]
       - recipe[nginx_service_test::single]
