Use chef standard .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,48 @@
-.*.sw[a-z]
-.#*
-.bundle
-.cache
-.coverage
-.env
-.envrc
-.kitchen.local.yml
-.kitchen/
-.ruby-gemset
-.ruby-version
-.vagrant
-.yardoc/
-*.un~
-*#
+*.rbc
+.config
+coverage
+InstalledFiles
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+_Store
 *~
+*#
+.#*
 \#*#
-Berksfile.lock
-bin
-coverage/
-doc/
+.*.sw[a-z]
+*.un~
+*.tmp
+*.bk
+*.bkup
+
+# ruby/bundler files
+.ruby-version
+.ruby-gemset
+.rvmrc
 Gemfile.lock
+.bundle
+*.gem
+
+# YARD artifacts
+.yardoc
+_yardoc
+doc/
+.idea
+
+#chef stuff
+Berksfile.lock
+.kitchen
+.kitchen.local.yml
+vendor/
+.coverage/
+.zero-knife.rb
+
+#vagrant stuff
+.vagrant/
+.vagrant.d/
+.kitchen/
