Expand the platforms in test kitchen

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,4 +1,3 @@
----
 driver:
   name: vagrant
 
@@ -6,30 +5,36 @@ provisioner:
   name: chef_zero
 
 platforms:
-  - name: debian-7.9
-  - name: ubuntu-12.04
-  - name: ubuntu-14.04
-  - name: centos-6.7
+  - name: centos-5.11
+  - name: centos-6.8
   - name: centos-7.2
+  - name: debian-7.11
+    run_list: apt::default
+  - name: debian-8.5
+    run_list: apt::default
+  - name: fedora-24
+    run_list: yum::dnf_yum_compat
+  - name: ubuntu-12.04
+    run_list: apt::default
+  - name: ubuntu-14.04
+    run_list: apt::default
+  - name: ubuntu-16.04
+    run_list: apt::default
 
 suites:
   - name: example
     run_list:
-      - recipe[nginx_service_test::common]
       - recipe[nginx::example]
 
   - name: service_single
     run_list:
-      - recipe[nginx_service_test::common]
       - recipe[nginx_service_test::single]
 
   - name: service_multi
     run_list:
-      - recipe[nginx_service_test::common]
       - recipe[nginx_service_test::multi]
 
   - name: service_single_upstream
     run_list:
-      - recipe[nginx_service_test::common]
       - recipe[nginx_service_test::nginx_repo]
       - recipe[nginx_service_test::single]
