Add nginx_install custom resource
Break out the installation of nginx so the user can just skip the resource if they have a custom nginx installation needs.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,8 +4,9 @@ AllCops:
     - 'vendor/**/*'
 
 Metrics/LineLength:
-  Max: 160
-
+  Enabled: false
+CyclomaticComplexity:
+  Enabled: false
 Style/SpaceBeforeFirstArg:
   Enabled: false
 Style/ExtraSpacing:
