Update Test Kitchen config
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,14 +5,21 @@ provisioner:
   name: chef_zero
 
 platforms:
-  - name: centos-5.10
-  - name: centos-6.5
-  - name: ubuntu-10.04
-    run_list:
-        - recipe[apt]
+  - name: centos-5.11
+  - name: centos-6.8
+  - name: centos-7.2
+  - name: debian-7.11
+    run_list: apt::default
+  - name: debian-8.5
+    run_list: apt::default
+  - name: fedora-24
+    run_list: yum::dnf_yum_compat
   - name: ubuntu-12.04
-    run_list:
-        - recipe[apt]
+    run_list: apt::default
+  - name: ubuntu-14.04
+    run_list: apt::default
+  - name: ubuntu-16.04
+    run_list: apt::default
 
 suites:
   - name: default
@@ -31,6 +38,8 @@ suites:
     attributes:
       nginx:
         repo_source: nginx
+    excludes:
+      - fedora-24
   - name: modules
     run_list:
       - recipe[nginx::source]
