Install the latest test kitchen in Circle CI
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,8 @@ machine:
 
 dependencies:
   override:
-    - curl -L https://www.chef.io/chef/install.sh | sudo bash -s -- -P chefdk -v 0.11.2
-    - chef gem install kitchen-docker -v '~> 2.3.0'
+    - curl -L https://www.chef.io/chef/install.sh | sudo bash -s -- -P chefdk
+    - chef gem install kitchen-dokken
   cache_directories:
     - "~/.chefdk"
 
