--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,21 +4,26 @@ driver:
 provisioner:
   name: chef_zero
 
+verifier:
+  name: inspec
+
 platforms:
   - name: centos-5.11
-  - name: centos-6.7
+  - name: centos-6.8
   - name: centos-7.2
-  - name: debian-7.9
+  - name: debian-7.11
     run_list: apt::default
-  - name: debian-8.2
+  - name: debian-8.5
     run_list: apt::default
-  - name: fedora-22
+  - name: fedora-24
     run_list: yum::dnf_yum_compat
-  - name: fedora-23
-    run_list: yum::dnf_yum_compat
+  - name: opensuse-13.2
+  - name: opensuse-42.1
   - name: ubuntu-12.04
     run_list: apt::default
   - name: ubuntu-14.04
+    run_list: apt::default
+  - name: ubuntu-16.04
     run_list: apt::default
 
 suites:
