Convert to a chef cookbook
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -27,17 +27,17 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[nginx::default]
+      - recipe[chef_nginx::default]
   - name: source
     run_list:
-      - recipe[nginx::default]
+      - recipe[chef_nginx::default]
     attributes:
       nginx:
         install_method: source
   - name: upstream_repo
     run_list:
-      - recipe[nginx::repo]
-      - recipe[nginx::default]
+      - recipe[chef_nginx::repo]
+      - recipe[chef_nginx::default]
     attributes:
       nginx:
         repo_source: nginx
@@ -45,22 +45,22 @@ suites:
       - fedora-24
   - name: modules
     run_list:
-      - recipe[nginx::source]
+      - recipe[chef_nginx::source]
     attributes:
       nginx:
         source:
           modules:
-            - nginx::headers_more_module
-            - nginx::http_auth_request_module
-            - nginx::http_echo_module
-            - nginx::http_geoip_module
-            - nginx::http_gzip_static_module
-            - nginx::http_realip_module
-            - nginx::http_v2_module
-            - nginx::http_ssl_module
-            - nginx::http_stub_status_module
-            - nginx::naxsi_module
-            - nginx::ngx_devel_module
-            - nginx::ngx_lua_module
-            - nginx::openssl_source
-            - nginx::upload_progress_module
+            - chef_nginx::headers_more_module
+            - chef_nginx::http_auth_request_module
+            - chef_nginx::http_echo_module
+            - chef_nginx::http_geoip_module
+            - chef_nginx::http_gzip_static_module
+            - chef_nginx::http_realip_module
+            - chef_nginx::http_v2_module
+            - chef_nginx::http_ssl_module
+            - chef_nginx::http_stub_status_module
+            - chef_nginx::naxsi_module
+            - chef_nginx::ngx_devel_module
+            - chef_nginx::ngx_lua_module
+            - chef_nginx::openssl_source
+            - chef_nginx::upload_progress_module
