Add support for Suse with package installs
Adds a dependency on the zypper cookbook for setting up the repo.

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -17,6 +17,8 @@ platforms:
     run_list: apt::default
   - name: fedora-24
     run_list: yum::dnf_yum_compat
+  - name: opensuse-13.2
+  - name: opensuse-42.1
   - name: ubuntu-12.04
     run_list: apt::default
   - name: ubuntu-14.04
