Fix kitchen runs on opensuse
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -86,14 +86,14 @@ platforms:
     image: opensuse:13.2
     pid_one_command: /bin/systemd
     intermediate_instructions:
-      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which
+      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which hostname
 
 - name: opensuse-42.1
   driver:
     image: opensuse:42.1
     pid_one_command: /bin/systemd
     intermediate_instructions:
-      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which
+      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which hostname
 
 suites:
   - name: default
