--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -86,7 +86,7 @@ platforms:
     image: opensuse:13.2
     pid_one_command: /bin/systemd
     intermediate_instructions:
-      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which hostname
+      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which net-tools
 
 - name: opensuse-42.1
   driver:
