--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,21 +12,15 @@ platforms:
   - name: centos-6.8
   - name: centos-7.2
   - name: debian-7.11
-    run_list: apt::default
   - name: debian-8.5
-    run_list: apt::default
   - name: fedora-24
     run_list: yum::dnf_yum_compat
   - name: opensuse-13.2
   - name: opensuse-42.1
   - name: ubuntu-12.04
-    run_list: apt::default
   - name: ubuntu-14.04
-    run_list: apt::default
   - name: ubuntu-16.04
-    run_list: apt::default
   - name: ubuntu-16.04-chef-12.1
-    run_list: apt::default
     driver_config:
       box: bento/ubuntu-16.04
     provisioner:
@@ -35,47 +29,22 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[chef_nginx::default]
+      - recipe[test::default]
     excludes:
       - opensuse-13.2 # lacks nginx package
   - name: source
     run_list:
-      - recipe[chef_nginx::default]
-    attributes:
-      nginx:
-        install_method: source
+      - recipe[test::source]
     excludes:
       - ubuntu-16.04-chef-12.1
   - name: upstream_repo
     run_list:
-      - recipe[chef_nginx::repo]
-      - recipe[chef_nginx::default]
-    attributes:
-      nginx:
-        repo_source: nginx
+      - recipe[test::upstream_repo]
     excludes:
-      - fedora-24
+      - fedora-24 # lacks nginx repo
       - ubuntu-16.04-chef-12.1
   - name: modules
     run_list:
-      - recipe[chef_nginx::source]
-    attributes:
-      nginx:
-        source:
-          modules:
-            - chef_nginx::headers_more_module
-            - chef_nginx::http_auth_request_module
-            - chef_nginx::http_echo_module
-            - chef_nginx::http_geoip_module
-            - chef_nginx::http_gzip_static_module
-            - chef_nginx::http_realip_module
-            - chef_nginx::http_v2_module
-            - chef_nginx::http_ssl_module
-            - chef_nginx::http_stub_status_module
-            - chef_nginx::naxsi_module
-            - chef_nginx::ngx_devel_module
-            - chef_nginx::ngx_lua_module
-            - chef_nginx::openssl_source
-            - chef_nginx::upload_progress_module
+      - recipe[test::modules]
     excludes:
       - ubuntu-16.04-chef-12.1
