Fix the opensuseleap box name
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -16,7 +16,7 @@ platforms:
   - name: fedora-24
     run_list: yum::dnf_yum_compat
   - name: opensuse-13.2
-  - name: opensuse-42.1
+  - name: opensuse-leap-42.1
   - name: ubuntu-12.04
   - name: ubuntu-14.04
   - name: ubuntu-16.04
