--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -51,7 +51,7 @@ platforms:
     platform: rhel
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
-      - RUN yum -y install lsof which systemd-sysv initscripts
+      - RUN yum -y install lsof which systemd-sysv initscripts openssl
 
 - name: fedora-latest
   driver:
