Rework the testing cookbook a bit more
Rename the default suite so people understand that is a distro package suite
Add a _base recipe to dude things a bit
Remove the guard around apt_update since we fixed that bug in Chef / compat_resource
Test site setup so we actually get a test on how people would use this thing

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -90,9 +90,9 @@ platforms:
       - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which hostname
 
 suites:
-  - name: default
+  - name: distro_packages
     run_list:
-      - recipe[test::default]
+      - recipe[test::distro_packages]
   - name: source
     run_list:
       - recipe[test::source]
