--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -31,9 +31,9 @@ platforms:
       require_chef_omnibus: 12.1.0
 
 suites:
-  - name: default
+  - name: distro_packages
     run_list:
-      - recipe[test::default]
+      - recipe[test::distro_packages]
     excludes:
       - opensuse-13.2 # lacks nginx package
   - name: source
