Make sure we have openssl in docker
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -20,7 +20,7 @@ platforms:
     pid_one_command: /sbin/init
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install lsb-release procps net-tools -y
+      - RUN /usr/bin/apt-get install openssl apt-transport-https lsb-release procps net-tools -y
 
 - name: debian-8
   driver:
@@ -28,7 +28,7 @@ platforms:
     pid_one_command: /bin/systemd
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install lsb-release procs net-tools -y
+      - RUN /usr/bin/apt-get install openssl apt-transport-https lsb-release procps net-tools -y
 
 - name: centos-5
   driver:
@@ -36,7 +36,7 @@ platforms:
     platform: rhel
     pid_one_command: /sbin/init
     intermediate_instructions:
-      - RUN yum install -y which initscripts net-tools wget
+      - RUN yum install -y openssl which initscripts net-tools wget
 
 - name: centos-6
   driver:
@@ -44,7 +44,7 @@ platforms:
     platform: rhel
     pid_one_command: /sbin/init
     intermediate_instructions:
-      - RUN yum -y install which initscripts net-tools wget
+      - RUN yum -y install openssl which initscripts net-tools wget
 
 - name: centos-7
   driver:
@@ -52,14 +52,14 @@ platforms:
     platform: rhel
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
-      - RUN yum -y install lsof which systemd-sysv initscripts wget net-tools
+      - RUN yum -y install openssl lsof which systemd-sysv initscripts wget net-tools
 
 - name: fedora-latest
   driver:
     image: fedora:latest
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
-      - RUN dnf -y install yum which systemd-sysv initscripts wget net-tools
+      - RUN dnf -y install yum openssl which systemd-sysv initscripts wget net-tools
 
 - name: ubuntu-12.04
   driver:
@@ -67,7 +67,7 @@ platforms:
     pid_one_command: /sbin/init
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools -y
+      - RUN /usr/bin/apt-get install openssl apt-transport-https lsb-release procps net-tools -y
 
 - name: ubuntu-14.04
   driver:
@@ -75,7 +75,7 @@ platforms:
     pid_one_command: /sbin/init
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools -y
+      - RUN /usr/bin/apt-get install openssl apt-transport-https lsb-release procps net-tools -y
 
 - name: ubuntu-16.04
   driver:
@@ -83,21 +83,21 @@ platforms:
     pid_one_command: /bin/systemd
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools -y
+      - RUN /usr/bin/apt-get install openssl apt-transport-https lsb-release procps net-tools -y
 
 - name: opensuse-13.2
   driver:
     image: opensuse:13.2
     pid_one_command: /bin/systemd
     intermediate_instructions:
-      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which net-tools
+      - RUN zypper --non-interactive install openssl aaa_base perl-Getopt-Long-Descriptive which net-tools
 
 - name: opensuse-42.1
   driver:
     image: opensuse:42.1
     pid_one_command: /bin/systemd
     intermediate_instructions:
-      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which hostname
+      - RUN zypper --non-interactive install openssl aaa_base perl-Getopt-Long-Descriptive which hostname
 
 suites:
   - name: distro_packages
